# exchange-game

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
app/: config.py  db.py  main.py  models.py  schemas.py  utils.py
tests/: conftest.py  test_api_flow.py  test_pricing.py
web/: README.md  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/admin/: page.tsx
web/app/api/backend/[...path]/: route.ts
web/app/leaderboard/: page.tsx
web/app/leaderboard/[gameId]/: page.tsx
web/components/: Alert.tsx  LoadingButton.tsx
web/lib/: api.ts  format.ts  types.ts
